# ros_astra_sdk_wrapper

./: CMakeLists.txt  LICENSE  README.md  astra_sdk_nodelets.xml  package.xml
include/ros_astra_sdk_wrapper/: astra_device_manager.h  astra_stream_manager.h  stream_wrapper.h
launch/: astra_sdk_nodelet.launch.xml  ros_astra_sdk_simple.launch  ros_astra_sdk_wrapper.launch
msg/: BodyTracking.msg
ros/: ros_astra_sdk_node.cpp  ros_astra_sdk_nodelet.cpp
src/: astra_device_manager.cpp  astra_stream_manager.cpp  stream_wrapper.cpp
