<?xml version="1.0"?>
<package format="2">
  <name>ros_astra_sdk_wrapper</name>
  <version>1.0.0</version>
  <description>a wrapper to fully use Orbbec Astra SDK with rgb, depth and body tracking streams</description>
  <maintainer email="joana.haase@tum.de">Dave Shinsel</maintainer>
  <license>BSD License, some code copied from Orbbec Astra SDK and ros_astra_camera; see Astra SDK and ros_astra_camera for licensing</license>
  <author email="joana.haase@tum.de">Joana Haase</author> -->

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>nodelet</build_export_depend>
  <build_export_depend>image_transport</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>message_generation</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>nodelet</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>message_generation</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <nodelet plugin="${prefix}/astra_sdk_nodelets.xml"/>
  </export>
</package>
